# GstreamerStudy

./: .gitignore  CMakeLists.txt  simplePipeline.cpp
deepstream/deepstream-test1/: deepstream_test1_app.c  dstest1_pgie_config.txt
deepstream/deepstream-yolov3-test1/: Makefile  config_infer_primary_yoloV3_tiny.txt  deepstream_yolov3_test1_app.c
deepstream/deepstream-yolov3-test1/nvdsinfer_custom_impl_Yolo/: Makefile
docker/: Dockerfile  Dockerfile-devel  README.md  docker-compose-devel.yml  docker-compose.yml
tutorials/: CMakeLists.txt  basic-tutorial-1.cpp  basic-tutorial-2.cpp  basic-tutorial-3.cpp  basic-tutorial-4.cpp  basic-tutorial-5.cpp
